# INT20H-test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  readme.md
backend/: Cargo.toml  config.toml
backend/migrations/1_everything/: down.sql  up.sql
backend/src/: config.rs  database.rs  main.rs  schema.rs
backend/src/route/: create_quest.rs  get_applied_quests.rs  get_avatar.rs  get_quest_info.rs  get_quests_page.rs  get_user_info.rs  get_user_owned_quests.rs  login.rs  mod.rs  partial_update_quest_info.rs  publish_quest.rs  quests_join.rs  quests_owner_rate.rs  register.rs  update_avatar.rs  update_quest_page.rs  update_rate_comment.rs  ws_quest_participation.rs
common/: Cargo.toml
common/src/: lib.rs  questions.rs
frontend/: .leptosfmt  Cargo.toml
frontend/src/: lib.rs
frontend/src/api/: dummy.rs  error.rs  mod.rs  real.rs
frontend/src/components/: button.rs  input.rs  mod.rs  paginated.rs  quest.rs
frontend/src/pages/: edit.rs  home.rs  login.rs  mod.rs  play.rs  register.rs  room.rs  root.rs
frontend/src/quest/: source.rs
leptos-flavour/: Cargo.toml
leptos-flavour/src/: lib.rs
