[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "front"

[dependencies]
common = {path = "../common"}
leptos-flavour = {path = "../leptos-flavour"}
console_error_panic_hook = "0.1.7"
derive_more = { version = "2.0.1", default-features = false, features = ["display", "from"] }
futures = "0.3.31"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.11", default-features = false }
tokio = { version = "1.43.0", features = ["time"] }
wasm-bindgen-futures = "0.4.50"
wasmtimer = "0.4.1"
fastrand = "2.3.0"
thaw = { version = "0.4.2", features = ["csr"] }
leptos = { version = "0.7.5", features = ["csr"] }
gloo-net = { version = "0.6.0", features = ["websocket", "http"] }
leptos_router = "0.7.5"
uuid = "1.13.1"
slice-dst = "1.6.0"
paste = "1.0.15"
rapidhash = { version = "1.3.0", default-features = false }
chrono = { version = "0.4.39", features = ["serde"] }
icondata = { version="0.5.0", features=["ant-design-icons"] }
markdown = "0.3.0"
thaw_utils = "0.1.1"
json = "0.12.4"
